--- a/lab_2/lab_2_playing_with_images.ipynb
+++ b/lab_2/lab_2_playing_with_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-02-23T15:00:27.111882Z",
@@ -15,10 +15,10 @@
      "evalue": "invalid syntax (image_models.py, line 44)",
      "output_type": "error",
      "traceback": [
-      "Traceback \u001B[0;36m(most recent call last)\u001B[0m:\n",
-      "\u001B[0m  File \u001B[1;32m/opt/anaconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3505\u001B[0m in \u001B[1;35mrun_code\u001B[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001B[0m\n",
-      "\u001B[0;36m  Cell \u001B[0;32mIn[1], line 4\u001B[0;36m\n\u001B[0;31m    from helpers.image_models import ImagePrediction\u001B[0;36m\n",
-      "\u001B[0;36m  File \u001B[0;32m~/Downloads/lab_2/helpers/image_models.py:44\u001B[0;36m\u001B[0m\n\u001B[0;31m    match model_name:\u001B[0m\n\u001B[0m          ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "\u001b[0m  File \u001b[1;32m~/Library/Python/3.9/lib/python/site-packages/IPython/core/interactiveshell.py:3550\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 4\u001b[0;36m\n\u001b[0;31m    from helpers.image_models import ImagePrediction\u001b[0;36m\n",
+      "\u001b[0;36m  File \u001b[0;32m~/Documents/AI-validation/lab_2/helpers/image_models.py:44\u001b[0;36m\u001b[0m\n\u001b[0;31m    match model_name:\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
