--- a/lab_2/lab_2_playing_with_images.ipynb
+++ b/lab_2/lab_2_playing_with_images.ipynb
@@ -2,27 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:17:24.024059Z",
-     "start_time": "2024-02-23T15:16:51.076963Z"
+     "end_time": "2024-02-23T16:13:05.607193Z",
+     "start_time": "2024-02-23T16:13:03.773654Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Physical GPUs, 0 Logical GPUs\n",
-      "Version:  2.15.0\n",
-      "Eager mode:  True\n",
-      "GPU is NOT AVAILABLE\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels.h5\n",
-      "553467096/553467096 [==============================] - 29s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import relevant modules\n",
     "# ImagePrediction is a helper module (helpers/image_models) that assists with setting up the image recognition models\n",
@@ -43,11 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:17:24.417412Z",
-     "start_time": "2024-02-23T15:17:24.024330Z"
+     "end_time": "2024-02-23T16:13:05.831060Z",
+     "start_time": "2024-02-23T16:13:05.608875Z"
     }
    },
    "outputs": [
@@ -55,8 +42,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://storage.googleapis.com/download.tensorflow.org/data/imagenet_class_index.json\n",
-      "35363/35363 [==============================] - 0s 0us/step\n",
       "[('n02437616', 'llama', 0.9984397), ('n02417914', 'ibex', 0.00045074782), ('n02412080', 'ram', 0.0003347307), ('n01518878', 'ostrich', 0.00028087143), ('n02423022', 'gazelle', 0.00020455045), ('n02415577', 'bighorn', 0.00011685205), ('n02326432', 'hare', 9.440649e-05), ('n01806143', 'peacock', 1.0596843e-05), ('n02391049', 'zebra', 9.451463e-06), ('n01877812', 'wallaby', 5.0913545e-06)]\n"
      ]
     }
@@ -68,11 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:17:24.656236Z",
-     "start_time": "2024-02-23T15:17:24.417332Z"
+     "end_time": "2024-02-23T16:13:05.964466Z",
+     "start_time": "2024-02-23T16:13:05.828044Z"
     }
    },
    "outputs": [
@@ -91,11 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:17:24.790310Z",
-     "start_time": "2024-02-23T15:17:24.653346Z"
+     "end_time": "2024-02-23T16:13:06.092398Z",
+     "start_time": "2024-02-23T16:13:05.962176Z"
     }
    },
    "outputs": [
@@ -117,11 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:17:24.997920Z",
-     "start_time": "2024-02-23T15:17:24.788473Z"
+     "end_time": "2024-02-23T16:13:06.226424Z",
+     "start_time": "2024-02-23T16:13:06.094221Z"
     }
    },
    "outputs": [
@@ -141,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:17:25.163911Z",
-     "start_time": "2024-02-23T15:17:24.998078Z"
+     "end_time": "2024-02-23T16:13:06.357187Z",
+     "start_time": "2024-02-23T16:13:06.225342Z"
     }
    },
    "outputs": [
@@ -166,11 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:17:25.167915Z",
-     "start_time": "2024-02-23T15:17:25.161977Z"
+     "end_time": "2024-02-23T16:13:06.361714Z",
+     "start_time": "2024-02-23T16:13:06.357329Z"
     }
    },
    "outputs": [
@@ -190,11 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:27:38.446499Z",
-     "start_time": "2024-02-23T15:27:38.156366Z"
+     "end_time": "2024-02-23T16:13:06.666224Z",
+     "start_time": "2024-02-23T16:13:06.359141Z"
     }
    },
    "outputs": [
@@ -202,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('n02417914', 'ibex', 0.47466332), ('n02437616', 'llama', 0.40100285), ('n02326432', 'hare', 0.07232786), ('n02415577', 'bighorn', 0.009352403), ('n02423022', 'gazelle', 0.009291524), ('n02412080', 'ram', 0.008976868), ('n01877812', 'wallaby', 0.007323675), ('n02396427', 'wild_boar', 0.0011894159), ('n02056570', 'king_penguin', 0.00076480047), ('n02127052', 'lynx', 0.00073175586)]\n"
+      "[('n02417914', 'ibex', 0.39078605), ('n02326432', 'hare', 0.33645064), ('n02437616', 'llama', 0.15929434), ('n01877812', 'wallaby', 0.045820884), ('n02423022', 'gazelle', 0.009902674), ('n02325366', 'wood_rabbit', 0.0075563053), ('n02127052', 'lynx', 0.005986124), ('n02415577', 'bighorn', 0.005504269), ('n02396427', 'wild_boar', 0.0040996834), ('n02412080', 'ram', 0.0028857435)]\n"
      ]
     }
    ],
@@ -249,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
@@ -296,8 +281,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:40:35.416491Z",
-     "start_time": "2024-02-23T15:40:35.239356Z"
+     "end_time": "2024-02-23T16:13:06.814220Z",
+     "start_time": "2024-02-23T16:13:06.664416Z"
     }
    }
   },
@@ -312,14 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[('n03000684', 'chain_saw', 0.37360898), ('n02226429', 'grasshopper', 0.1234823), ('n02236044', 'mantis', 0.077015236), ('n02168699', 'long-horned_beetle', 0.06346717), ('n02231487', 'walking_stick', 0.04875064), ('n02229544', 'cricket', 0.040888287), ('n03649909', 'lawn_mower', 0.02872657), ('n02167151', 'ground_beetle', 0.028077086), ('n02165105', 'tiger_beetle', 0.027187046), ('n02233338', 'cockroach', 0.014033518)]\n",
-      "\n",
       "\n",
       "\n",
       "\n",
@@ -358,18 +342,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:56:03.812089Z",
-     "start_time": "2024-02-23T15:56:03.535884Z"
+     "end_time": "2024-02-23T16:13:07.079853Z",
+     "start_time": "2024-02-23T16:13:06.812013Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-23T15:50:08.731334Z",
-     "start_time": "2024-02-23T15:50:08.571990Z"
+     "end_time": "2024-02-23T16:13:07.223228Z",
+     "start_time": "2024-02-23T16:13:07.077695Z"
     }
    },
    "outputs": [
@@ -410,11 +394,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-23T16:13:07.223441Z",
+     "start_time": "2024-02-23T16:13:07.220277Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-23T16:13:07.223861Z",
+     "start_time": "2024-02-23T16:13:07.222328Z"
+    }
    }
   }
  ],
