--- a/Project/EDA.ipynb
+++ b/Project/EDA.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-08T15:06:27.560530Z",
-     "start_time": "2024-03-08T15:06:27.310838Z"
+     "end_time": "2024-03-08T15:11:41.423291Z",
+     "start_time": "2024-03-08T15:11:41.164098Z"
     }
    },
    "outputs": [
@@ -228,7 +228,60 @@
       "typering_transport__logistiek___tuinbouw    0\n",
       "typering_zorg__schoonmaak___welzijn         0\n",
       "checked                                     0\n",
-      "Length: 316, dtype: int64\n"
+      "Length: 316, dtype: int64\n",
+      "\n",
+      "Persoon_leeftijd_bij_onderzoek:\n",
+      "persoon_leeftijd_bij_onderzoek\n",
+      "51    493\n",
+      "52    491\n",
+      "53    474\n",
+      "48    473\n",
+      "55    466\n",
+      "50    460\n",
+      "54    438\n",
+      "49    434\n",
+      "58    428\n",
+      "57    427\n",
+      "47    411\n",
+      "46    406\n",
+      "56    404\n",
+      "45    401\n",
+      "44    389\n",
+      "59    372\n",
+      "61    365\n",
+      "60    365\n",
+      "43    361\n",
+      "42    353\n",
+      "62    339\n",
+      "63    315\n",
+      "40    305\n",
+      "41    296\n",
+      "39    273\n",
+      "64    265\n",
+      "65    258\n",
+      "38    228\n",
+      "37    217\n",
+      "36    212\n",
+      "66    192\n",
+      "35    185\n",
+      "34    149\n",
+      "33    128\n",
+      "32    115\n",
+      "31    111\n",
+      "30     93\n",
+      "29     91\n",
+      "28     86\n",
+      "67     80\n",
+      "27     63\n",
+      "26     50\n",
+      "25     44\n",
+      "24     43\n",
+      "23     32\n",
+      "22     24\n",
+      "21     18\n",
+      "19     11\n",
+      "20     11\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -256,8 +309,353 @@
     "\n",
     "# Check for missing values\n",
     "print(\"\\nMissing values in the dataset:\")\n",
-    "print(df.isnull().sum())\n"
+    "print(df.isnull().sum())\n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "persoon_leeftijd_bij_onderzoek\n",
+    "relatie_overig_actueel_vorm__kostendeler\n",
+    "contacten_onderwerp_no_show\n",
+    "competentie_vakdeskundigheid_toepassen\n",
+    "contacten_onderwerp_overleg_met_inkomen\n",
+    "adres_dagen_op_adres\n",
+    "relatie_overig_kostendeler\n",
+    "pla_historie_ontwikkeling\n",
+    "instrument_ladder_huidig_activering\n",
+    "contacten_soort_afgelopenjaar_document_uitgaand"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cb039f7ad5460b94"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12645.000000\n",
+      "mean        49.293159\n",
+      "std          9.990205\n",
+      "min         19.000000\n",
+      "25%         43.000000\n",
+      "50%         50.000000\n",
+      "75%         57.000000\n",
+      "max         67.000000\n",
+      "Name: persoon_leeftijd_bij_onderzoek, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print persoon_leeftijd_bij_onderzoek\n",
+    "print(df['persoon_leeftijd_bij_onderzoek'].describe())\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T15:12:57.866174Z",
+     "start_time": "2024-03-08T15:12:57.861323Z"
+    }
+   },
+   "id": "c68915d3a101a6d1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12645.000000\n",
+      "mean         0.837643\n",
+      "std          0.740525\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          1.000000\n",
+      "75%          1.000000\n",
+      "max          4.000000\n",
+      "Name: relatie_overig_actueel_vorm__kostendeler, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print relatie_overig_actueel_vorm__kostendeler\n",
+    "print(df['relatie_overig_actueel_vorm__kostendeler'].describe())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T15:20:20.208093Z",
+     "start_time": "2024-03-08T15:20:20.200193Z"
+    }
+   },
+   "id": "23c7ecb938406719"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12645.000000\n",
+      "mean         1.103836\n",
+      "std          0.900660\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          1.000000\n",
+      "75%          2.000000\n",
+      "max          6.000000\n",
+      "Name: contacten_onderwerp_no_show, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['contacten_onderwerp_no_show'].describe())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T15:20:26.321256Z",
+     "start_time": "2024-03-08T15:20:26.308240Z"
+    }
+   },
+   "id": "63f8387817ac962b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12645.000000\n",
+      "mean         0.474180\n",
+      "std          0.539694\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          0.000000\n",
+      "75%          1.000000\n",
+      "max          3.000000\n",
+      "Name: competentie_vakdeskundigheid_toepassen, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['competentie_vakdeskundigheid_toepassen'].describe())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T15:20:42.279698Z",
+     "start_time": "2024-03-08T15:20:42.272128Z"
+    }
+   },
+   "id": "5fd74c6575ae63ae"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12645.000000\n",
+      "mean         1.031870\n",
+      "std          0.853105\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          1.000000\n",
+      "75%          2.000000\n",
+      "max          6.000000\n",
+      "Name: contacten_onderwerp_overleg_met_inkomen, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['contacten_onderwerp_overleg_met_inkomen'].describe())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T15:20:45.118737Z",
+     "start_time": "2024-03-08T15:20:45.103217Z"
+    }
+   },
+   "id": "8b30d3f702c6ec86"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12645.000000\n",
+      "mean      9904.945828\n",
+      "std       6336.626793\n",
+      "min          3.000000\n",
+      "25%       4554.000000\n",
+      "50%       9148.000000\n",
+      "75%      14670.000000\n",
+      "max      24326.000000\n",
+      "Name: adres_dagen_op_adres, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['adres_dagen_op_adres'].describe())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T15:20:46.882367Z",
+     "start_time": "2024-03-08T15:20:46.869078Z"
+    }
+   },
+   "id": "7eada2b991c448d5"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12645.000000\n",
+      "mean         0.249110\n",
+      "std          0.432515\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          0.000000\n",
+      "75%          0.000000\n",
+      "max          1.000000\n",
+      "Name: relatie_overig_kostendeler, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['relatie_overig_kostendeler'].describe())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T15:20:48.389587Z",
+     "start_time": "2024-03-08T15:20:48.381259Z"
+    }
+   },
+   "id": "25ba38ed04fc0ac"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12645.000000\n",
+      "mean         0.613839\n",
+      "std          0.486887\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          1.000000\n",
+      "75%          1.000000\n",
+      "max          1.000000\n",
+      "Name: pla_historie_ontwikkeling, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['pla_historie_ontwikkeling'].describe())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T15:20:54.092188Z",
+     "start_time": "2024-03-08T15:20:54.087746Z"
+    }
+   },
+   "id": "5f3c160dede0f046"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12645.000000\n",
+      "mean         0.587426\n",
+      "std          0.601367\n",
+      "min          0.000000\n",
+      "25%          0.000000\n",
+      "50%          1.000000\n",
+      "75%          1.000000\n",
+      "max          3.000000\n",
+      "Name: instrument_ladder_huidig_activering, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['instrument_ladder_huidig_activering'].describe())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T15:21:42.613026Z",
+     "start_time": "2024-03-08T15:21:42.605606Z"
+    }
+   },
+   "id": "757fe9f9da01fc77"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    12645.000000\n",
+      "mean         3.677026\n",
+      "std          2.910140\n",
+      "min          0.000000\n",
+      "25%          1.000000\n",
+      "50%          3.000000\n",
+      "75%          5.000000\n",
+      "max         26.000000\n",
+      "Name: contacten_soort_afgelopenjaar_document__uitgaand_, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['contacten_soort_afgelopenjaar_document__uitgaand_'].describe())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-08T15:22:32.769967Z",
+     "start_time": "2024-03-08T15:22:32.764433Z"
+    }
+   },
+   "id": "22904899ca07b021"
   },
   {
    "cell_type": "code",
@@ -267,7 +665,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "c68915d3a101a6d1"
+   "id": "2d43bd878d8edd93"
   }
  ],
  "metadata": {
